# open_ptrack_v2

./: .gitignore  calibration_and_startup.md  jetson_install_openptrak.sh  jetson_setup.md  make-ubuntu-faster.sh
bayes/: CMakeLists.txt
bayes/src/: unsFlt.cpp
configs/: master.json  network.json  poses.json
detection/: CMakeLists.txt
detection/apps/: haardispada_nodelet.cpp
detection/conf/: ground_based_people_detector_kinect2.yaml
detection/launch/: detector_depth_kinect2.launch  detector_depth_real.launch  detector_kinect2.launch  detector_realsense.launch  object_detector.launch  object_detector_standalone.launch  people_detector_standalone.launch  realsense_frames.launch  skeleton_detector.launch  skeleton_detector_realsense.launch  skeleton_detector_standalone.launch
opt_calibration/: CMakeLists.txt
opt_msgs/: CMakeLists.txt
recognition/: CMakeLists.txt  package.xml
recognition/apps/: .debug_tvm_detector.cpp.swp  area_initializer.py  area_node.cpp  clean_pointclouds.cpp  debug_pose_model.cpp  debug_test.cpp  debug_tvm_detector.cpp  detection_node.cpp  detection_node_test.cpp  face_detection_extraction_node.cpp  ground_segmentation_app.cpp  hand_detection_node.cpp  hand_sync_node.cpp  join_pointclouds.cpp  pose_node.cpp  test_pose.cpp  tvm_detection_node.cpp  tvm_face_recognition_node.cpp  tvm_hand_detection_node.cpp  tvm_pose_recognition_node.cpp
recognition/cfg/: Clouds.yaml  FaceEmbedding.cfg  GenDetection.cfg  face_detector.json  face_embedder.json  hand_detector.json  master.json  model.json  pose_model.json
recognition/data/face_detector/: 0.7.dev1.mnet.25.x86.gpu.json  0.7.dev1.mnet.25.x86.gpu.params  mnet.25.aarch64.cpu.json  mnet.25.aarch64.cpu.params
recognition/data/face_embedder/: 0.7.dev1.mnet.facerec.x86.gpu.json  0.7.dev1.mnet.facerec.x86.gpu.params  mnet.facerec.aarch64.cpu.json  mnet.facerec.aarch64.cuda.json  mnet.facerec.aarch64.cuda.params  mnet.facerec.aarch64.gpu.json  mnet.facerec.aarch64.gpu.params
recognition/data/hand_detector/: 0.7.dev1.mnet.1.nonms.x86.hands.gpu.json  0.7.dev1.mnet.1.x86.hands.gpu.json  mnet.1.aarch64.cuda.hands.json
recognition/data/object_detector/: 0.7.dev1.mnet1.0.yolo.x86.gpu.json
recognition/data/simple_pose/: 0.7.dev1.pose.x86.gpu.json  pose_graph_gpu.json
recognition/data/small_yolo_nonms/: 0.7.dev1.256.256.mnet1.0.yolo.nonms.x86.gpu.json
recognition/data/tvm_detector/: deploy_graph_gpu.json  mnet1.0_yolo_aarch64_cuda_graph.json
recognition/experimental/: NoNMSPoseFromConfig.hpp  debug_test.cpp  decode.cu  decode.h  main.cu  nms.cu  nms.h  nmsBase.cu  pose_node.cpp  utils.h
recognition/experimental/base_node/: base_node.h
recognition/experimental/cuda/: nms_output.cu  region_output.cu  region_output.h  region_output.hpp  util.cu  util.h  util.hpp
recognition/experimental/detection_node/: detection_node.h  detection_node.hpp
recognition/experimental/experimental/apps/: area_initializer.py  area_node.cpp
recognition/experimental/experimental/cfg/: FaceDetection.cfg  face_detector.json  hand_detector.json
recognition/experimental/experimental/include/open_ptrack/face/: facetracker.cpp  facetracking.hpp
recognition/experimental/experimental/include/open_ptrack/models/: NoNMSYoloFromConfig.hpp  PoseFromConfig.hpp  YoloFromConfig.hpp  tvm_runtime_pack.cc
recognition/experimental/experimental/include/open_ptrack/nodes/: base_node.h
recognition/experimental/experimental/include/open_ptrack/nodes/impl/: detection_node.hpp
recognition/experimental/experimental/include/open_ptrack/person_clustering/: height_map_2d.hpp
recognition/experimental/experimental/launch/: tvm_hand_detection_node.launch  tvm_pose_node.launch
recognition/experimental/experimental/scripts/: face_detection_node.py  face_feature_extraction_node.py
recognition/experimental/ground_segmentation/: ground_segmentation.hpp
recognition/experimental/nms/: nms.cpp
recognition/experimental/nodes/: detection_node.h  hand_detection_node.h  hand_detection_node.hpp  pose_node.h  pose_node.hpp
recognition/include/open_ptrack/: NoNMSPoseFromConfig.hpp  NoNMSYOLACTFromConfig.cpp  NoNMSYoloFromConfig.hpp  detection.hpp  facetracking.hpp  tvm_detection_helpers.hpp  tvm_detectors.h  yolo_tvm.hpp
recognition/include/open_ptrack/MTCNN/: mtcnn_opencv.cpp
recognition/include/open_ptrack/base_node/: base_node.h  base_node.hpp
recognition/include/open_ptrack/detection/: ground_segmentation.h  ground_segmentation.hpp
recognition/include/open_ptrack/detection_node/: detection_node.h  detection_node.hpp
recognition/include/open_ptrack/ground_segmentation/: ground_segmentation.h  ground_segmentation.hpp
recognition/include/open_ptrack/hand_detection_node/: hand_detection_node.h  hand_detection_node.hpp
recognition/include/open_ptrack/nms/: nms.cpp  nms.h
recognition/include/open_ptrack/nms_utils/: nms.cpp  nms.h  nms.hpp
recognition/include/open_ptrack/person_clustering/: head_based_subclustering.cpp  head_based_subclustering.h  head_based_subclustering.hpp  height_map_2d.h  height_map_2d.hpp  person_cluster.cpp  person_cluster.h  person_cluster.hpp
recognition/include/open_ptrack/pose_node/: pose_node.h  pose_node.hpp
recognition/launch/: area_initializer.launch  area_node.launch  clean_pointcloud.launch  clean_pointclouds.launch  debug_tvm_detection_node.launch  debug_tvm_pose_node.launch  detector.launch  detector_test.launch  face_detection_embedding.launch  ground_semgentation_app.launch  hand_detection_node.launch  join_pointcloud.launch  join_pointclouds.launch  tvm_detection_node.launch  tvm_hand_detection_node.launch
recognition/src/: base_node.cpp  detection_node.cpp  hand_detection_node.cpp  pose_node.cpp
rtpose_wrapper/: Makefile.config
scripts/: blaster.sh  disable-nouveau.sh  install-xrdp.sh  install_openptrack_amd64.sh  install_openptrack_docker.sh  install_openptrack_jetson.sh  jetson_install_openptrak.sh  kernek_downgrade.sh  make-ubuntu-faster.sh
tracking/: CMakeLists.txt
tvm_models/: README.md  compile.py  non_nms_yolo.py
yolo_detector/: CMakeLists.txt
(+101 files in other folders)
